add a picture of my face, and a note on my favorite thing

--- a/about.html
+++ b/about.html
@@ -3,4 +3,11 @@ layout: default
 title: About Me
 ---
 
-<p>Hey, there.</p>
+<div class="row">
+  <div class="col-md-5">
+    <img class="img-responsive one-edge-shadow" src="http://farm3.staticflickr.com/2864/11060263585_662021e08a_z.jpg" alt="Me with Ruby"></img>
+  </div>
+  <div class="col-md-7">
+    <h1 class="about-hello">Hey, there. My name is Jordan Thornquest, and I freakin' love Jesus.</h1>
+  </div>
+</div>
