--- a/about.html
+++ b/about.html
@@ -3,11 +3,5 @@ layout: default
 title: About Me
 ---
 
-<div class="row">
-  <div class="col-md-5">
-    <img class="img-responsive one-edge-shadow" src="http://farm3.staticflickr.com/2864/11060263585_662021e08a_z.jpg" alt="Me with Ruby"></img>
-  </div>
-  <div class="col-md-7">
-    <h1 class="about-hello">Hey, there. My name is Jordan Thornquest, and I freakin' love Jesus.</h1>
-  </div>
-</div>
+<img alt="Lips." class="img-responsive one-edge-shadow center-img" height="500" src="http://farm4.staticflickr.com/3806/9364330402_8a73483b36_o.jpg" width="500">
+<h1 class="about-hello">Hey, there. My name is Jordan Thornquest, and I freakin' love Jesus.</h1>
