add a new landing page photo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Jordan Thornquest
 
 <div id="home">
 
-  <img alt="Lips." class="img-responsive one-edge-shadow center-img" height="500" src="http://farm4.staticflickr.com/3806/9364330402_8a73483b36_o.jpg" width="500">
+  <img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3818/11146321745_b06e3d2cda_o.jpg" alt="5 Guitarists">
 
   <h1>Posts</h1>
 
