change about page photo

--- a/about.html
+++ b/about.html
@@ -3,5 +3,5 @@ layout: default
 title: About Me
 ---
 
-<img alt="Lips." class="img-responsive one-edge-shadow center-img" height="500" src="http://farm4.staticflickr.com/3806/9364330402_8a73483b36_o.jpg" width="500">
+<img class="img-responsive one-edge-shadow center-img" src="http://farm8.staticflickr.com/7391/11146641993_aaa9934ed1_o.jpg" alt="Me on a bench.">
 <h1 class="about-hello">Hey, there. My name is Jordan Thornquest, and I freakin' love Jesus.</h1>
