--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Jordan Thornquest
 
   <h1>Posts</h1>
 
-  <ul class="posts">
+  <ul class="posts list-unstyled">
     {% for post in site.posts %}
     <li><span>{{ post.date | date_to_string }}</span> <i class="fa fa-angle-right"></i> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
