--- a/about.html
+++ b/about.html
@@ -2,6 +2,76 @@
 layout: default
 title: About Me
 ---
+<nav class="navbar navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">Jordan Thornquest</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="active">
+        <a href="/about.html">About</a>
+      </li>
+      <li>
+        <a href="/contact.html">Contact</a>
+      </li>
+      <li>
+      <a href="/portfolio.html"> Portfolio</a>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Creative <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/creative.html">Home</a></li>
+            <li class="divider"></li>
+            <li><a href="/creative/art.html">Art</a></li>
+            <li><a href="/creative/music.html">Music</a></li>
+            <li><a href="/creative/writing.html">Writing</a></li>
+            </ul>
+        </li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a class="pull-left" href="https://twitter.com/jsthornquest">
+            <i class="fa fa-twitter fa-lg"></i>
+          </a>
+          <a class="pull-left" href="https://www.facebook.com/jsthornquest">
+            <i class="fa fa-facebook fa-lg"></i>
+          </a>
+          <a class="pull-left" href="https://github.com/jordanthornquest">
+            <i class="fa fa-github fa-lg"></i>
+          </a>
+          <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
+            <i class="fa fa-cloud fa-lg"></i>
+          </a>
+          <a class="pull-left" href="http://pinterest.com/jsthornquest/">
+            <i class="fa fa-pinterest fa-lg"></i>
+          </a>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </nav>
+
+
 
 <img class="img-responsive one-edge-shadow center-img" src="http://farm8.staticflickr.com/7391/11146641993_aaa9934ed1_o.jpg" alt="Me on a bench.">
-<h1 class="about-hello">Hey, there. My name is Jordan Thornquest, and I freakin' love Jesus.</h1>
+<h1 class="about-hello">Hey, there. <small>My name is Jordan Thornquest, and I freakin' love Jesus.</small></h1>
+
+<p><span class="lead">I'm a musician, studio producer, web developer, and creative enthusiast from Idaho.</span> I love to make things, and I am passionate about doing my absolute best, and taking joy in whatever I do. It's no use doing something if you don't have a bit of fun, right?</p>
+<p>My absolute favorite hobby is playing the <strong>guitar</strong>, but I am also focused on achieving a career in <strong>audio recording</strong>. Not only is it a fantastic way to meet other talented musicians, but it allows me to hone my ear to all kinds of new sounds, ideas, and studio techniques, which I can later bring around and put into some of my own recordings! (I post all of my recordings on <a href="https://soundcloud.com/jordanthornquest">SoundCloud!</a>)</p>
+<p>When I'm not making or recording music, I am employed in active <strong>web development</strong>. I currently have a full-time job with a team of developers at <a href="http://kickbacksystems.com">KickBack Rewards Systems</a>, where I am able to discover and employ the latest technologies for some seriously modern web applications. <strong>I also do freelancing</strong>, and would love to take part in creating your web presence! I am lucky enough to work with some of the most creative minds in the Magic Valley, and together we could create something wonderful. I strive to create beauty and usability, the kind of products that remind people why we love technology, and how it can wow us.</p>
+<p>Here on my little spot on the web, I share the things I am making, and the thoughts in my head. This is the place to find everything that originates from my brain cells, from writing to art to music to code to whatever else. I've done my best to remain cool and professional, but hey, you're in my territory now.</p>
+<p><strong>Welcome to jordanthornquest.com. I hope you enjoy your visit.</strong></p>
+<p>(OH BY THE WAY. All of these fantastical photographs you see around here of my face are by the marvelously talented and more-than-slightly-handsome Eli Stonemets! <a href="http://elistonemetsphoto.com">Go check him out!</a>)</p>
+
+<img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3823/11217645326_7bddb24697_o.jpg" alt="Fox in Forest">
+<br>
+<p>Oh, and the fox scarf I'm wearing was made by my talented and beauteous sister Mariah, who is currently <a href="http://mcrot.mariahthornquest.com">Miss Canyon Rim's Outstanding Teen</a> (and she was in the top 10 for Miss Idaho)!</p>
