--- a/index.html
+++ b/index.html
@@ -2,12 +2,69 @@
 layout: default
 title: Jordan Thornquest
 ---
+<nav class="navbar navbar-default" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      <span class="sr-only">Toggle navigation</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">Jordan Thornquest</a>
+  </div>
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li>
+        <a href="/about.html">About</a>
+      </li>
+      <li>
+        <a href="/contact.html">Contact</a>
+      </li>
+      <li>
+      <a href="/portfolio.html"> Portfolio</a>
+      </li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Creative <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="/creative.html">Home</a></li>
+            <li class="divider"></li>
+            <li><a href="/creative/art.html">Art</a></li>
+            <li><a href="/creative/music.html">Music</a></li>
+            <li><a href="/creative/writing.html">Writing</a></li>
+            </ul>
+        </li>
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a class="pull-left" href="https://twitter.com/jsthornquest">
+            <i class="fa fa-twitter fa-lg"></i>
+          </a>
+          <a class="pull-left" href="https://www.facebook.com/jsthornquest">
+            <i class="fa fa-facebook fa-lg"></i>
+          </a>
+          <a class="pull-left" href="https://github.com/jordanthornquest">
+            <i class="fa fa-github fa-lg"></i>
+          </a>
+          <a class="pull-left" href="https://soundcloud.com/jordanthornquest">
+            <i class="fa fa-cloud fa-lg"></i>
+          </a>
+          <a class="pull-left" href="http://pinterest.com/jsthornquest/">
+            <i class="fa fa-pinterest fa-lg"></i>
+          </a>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </nav>
 
 <div id="home">
 
   <img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3818/11146321745_b06e3d2cda_o.jpg" alt="5 Guitarists">
 
-  <h1>Posts</h1>
+  <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
 
   <ul class="posts list-unstyled">
     {% for post in site.posts %}
