--- a/index.html
+++ b/index.html
@@ -64,12 +64,39 @@ title: Jordan Thornquest
 
   <img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3818/11146321745_b06e3d2cda_o.jpg" alt="5 Guitarists">
 
-  <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
+  <div class="page-header home-header">
+    <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
 
-  <ul class="posts list-unstyled">
-    {% for post in site.posts %}
-    <li><span>{{ post.date | date_to_string }}</span> <i class="fa fa-angle-right"></i> <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#blog" data-toggle="tab">Blog</a></li>
+      <li><a href="#twitter" data-toggle="tab">Twitter</a></li>
+      <li><a href="#soundcloud" data-toggle="tab">SoundCloud</a></li>
+    </ul>
+  </div>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+
+    <!-- Blog -->
+    <div class="tab-pane fade in active" id="blog">
+      <ul class="posts list-unstyled">
+        {% for post in site.posts %}
+        <li><span>{{ post.date | date_to_string }}</span> <i class="fa fa-angle-right"></i> <a href="{{ post.url }}">{{ post.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <!-- Twitter -->
+    <div class="tab-pane fade jst-timeline" id="twitter">
+      <a class="twitter-timeline" href="https://twitter.com/jsthornquest" data-widget-id="409955524235362304">Tweets by @jsthornquest</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>  
+    </div>
+
+    <!-- SoundCloud -->
+    <div class="tab-pane fade" id="soundcloud">
+      <iframe width="100%" height="600" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/4836768&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
+    </div>
+
+  </div>
 
 </div>
