--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ title: Jordan Thornquest
   <div class="page-header home-header">
     <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
 
-    <ul class="nav nav-tabs">
+    <ul class="nav nav-tabs nav-justified">
       <li class="active"><a href="#blog" data-toggle="tab">Blog</a></li>
       <li><a href="#twitter" data-toggle="tab">Twitter</a></li>
       <li><a href="#soundcloud" data-toggle="tab">SoundCloud</a></li>
