add mobile UX for stream, add stream CSS

--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@ title: Jordan Thornquest
   <div class="page-header home-header">
     <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
 
-    <ul class="nav nav-tabs nav-justified">
+    <!-- Visible only on Desktop & Tablets -->
+    <ul class="nav nav-tabs nav-justified streams visible-md visible-lg">
+      <li class="active"><a href="#blog" data-toggle="tab">Blog</a></li>
+      <li><a href="#twitter" data-toggle="tab">Twitter</a></li>
+      <li><a href="#soundcloud" data-toggle="tab">SoundCloud</a></li>
+    </ul>
+
+    <!-- Visible only on Tablets & Mobile -->
+    <ul class="nav nav-tabs streams visible-sm visible-xs">
       <li class="active"><a href="#blog" data-toggle="tab">Blog</a></li>
       <li><a href="#twitter" data-toggle="tab">Twitter</a></li>
       <li><a href="#soundcloud" data-toggle="tab">SoundCloud</a></li>
