--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ title: Jordan Thornquest
     <!-- Blog -->
     <div class="tab-pane fade in active" id="blog">
       <ul class="posts list-unstyled">
-        {% for post in site.posts %}
+        {% for post in site.categories['blog'] %}
         <li><span>{{ post.date | date_to_string }}</span> <i class="fa fa-angle-right"></i> <a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
       </ul>
