--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@ title: Jordan Thornquest
   <img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3818/11146321745_b06e3d2cda_o.jpg" alt="5 Guitarists">
 
   <div class="page-header home-header">
-    <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
-
     <!-- Visible only on Desktop & Tablets -->
     <ul class="nav nav-tabs nav-justified streams visible-md visible-lg">
-      <li><a href="#blog" data-toggle="tab">Blog</a></li>
-      <li class="active"><a href="#twitter" data-toggle="tab">Twitter</a></li>
+      <li class="active"><a href="#blog" data-toggle="tab">Blog</a></li>
+      <li><a href="#twitter" data-toggle="tab">Twitter</a></li>
       <li><a href="#soundcloud" data-toggle="tab">SoundCloud</a></li>
     </ul>
 
@@ -28,7 +26,8 @@ title: Jordan Thornquest
   <div class="tab-content">
 
     <!-- Blog -->
-    <div class="tab-pane fade" id="blog">
+    <div class="tab-pane fade in active fade" id="blog">
+      <h1>Posts <small>musings, stories, ideas, and code.</small></h1>
       <ul class="posts list-unstyled">
         {% for post in site.categories['blog'] %}
         <li><span>{{ post.date | date_to_string }}</span> <i class="fa fa-angle-right"></i> <a href="{{ post.url }}">{{ post.title }}</a></li>
@@ -37,7 +36,7 @@ title: Jordan Thornquest
     </div>
 
     <!-- Twitter -->
-    <div class="tab-pane fade in active jst-timeline" id="twitter">
+    <div class="tab-pane jst-twitter" id="twitter">
       <a class="twitter-timeline" href="https://twitter.com/jsthornquest" data-widget-id="409955524235362304">Tweets by @jsthornquest</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>  
     </div>
