fix a bug for the mobile feed where Twitter was highlighted, but the blog was being shown

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Home
 ---
+
 <div id="home">
 
   <img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3818/11146321745_b06e3d2cda_o.jpg" alt="5 Guitarists">
@@ -16,8 +17,8 @@ title: Home
 
     <!-- Visible only on Tablets & Mobile -->
     <ul class="nav nav-tabs streams visible-sm visible-xs">
-      <li><a href="#blog" data-toggle="tab">Blog</a></li>
-      <li class="active"><a href="#twitter" data-toggle="tab">Twitter</a></li>
+      <li class="active"><a href="#blog" data-toggle="tab">Blog</a></li>
+      <li><a href="#twitter" data-toggle="tab">Twitter</a></li>
       <li><a href="#soundcloud" data-toggle="tab">SoundCloud</a></li>
     </ul>
   </div>
