remove facebook, switch order of icons and words

--- a/contact/index.html
+++ b/contact/index.html
@@ -9,25 +9,20 @@ title: Contact Me
 
 <dl>
   <dt>
+    Email 
     <span class="fa-stack">
     <i class="fa fa-circle fa-stack-2x"></i>
     <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-    </span> Email
+    </span>
   <dt>
   <dd><a href="mailto:me@jordanthornquest.com">me@jordanthornquest.com</a></dd>
   <dt>
+    Twitter 
     <span class="fa-stack">
     <i class="fa fa-circle fa-stack-2x"></i>
     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-    </span> Twitter
+    </span>
   <dt>
   <dd><a href="https://twitter.com/jsthornquest">@jsthornquest</a></dd>
-  <dt>
-    <span class="fa-stack">
-    <i class="fa fa-circle fa-stack-2x"></i>
-    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-    </span> Facebook
-  <dt>
-  <dd><a href="https://facebook.com/jsthornquest">Jordan Thornquest</a></dd>
 </dl>
 
