re-organize the _posts to include writing instead of stories, and fixup those URLs

--- a/creative/writing.html
+++ b/creative/writing.html
@@ -11,8 +11,9 @@ title: Writing
 </div>
 
 <h3>Beagles <small>NaNoWriMo 2012 Novel</small></h3>
+<p>Beagles was my 2012 NaNoWriMo project, and the first NaNoWriMo I successfully completed! It's full of mistakes, hasn't been edited at all, and is unfinished, but hey, I made it!</p>
 <ul class="posts list-unstyled">
-  {% for post in site.categories['stories'] %}
+  {% for post in site.categories['writing'] %}
   <li><i class="fa fa-angle-right"></i> <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
