fix CSS for mobile navbar transition, and CSS for portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@ title: Portfolio
 <h2 class="portfolio-item-title">Miss Canyon Rim's Outstanding Teen</h2>
 <div class="row">
   <div class="col-sm-4">
-    <a href="http://mcrot.mariahthornquest.com"><img class="img-responsive img-thumbnail" src="http://farm4.staticflickr.com/3724/11218254185_6f823bc6c3_o.png" alt="MCROT Screenshot"></a>
+    <a href="http://mcrot.mariahthornquest.com"><img class="img-responsive img-thumbnail portfolio-img" src="http://farm4.staticflickr.com/3724/11218254185_6f823bc6c3_o.png" alt="MCROT Screenshot"></a>
   </div>
   <div class="col-sm-8">
     <p class="lead">The official website of Miss Canyon Rim's Outstanding Teen.</p>
