add some seo-friendly HTML tagness

--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,10 @@ layout: default
 title: About Me
 ---
 
-<img class="img-responsive one-edge-shadow center-img" src="http://farm8.staticflickr.com/7391/11146641993_aaa9934ed1_o.jpg" alt="Me on a bench.">
-<h1 class="about-hello">Hey, there. <small>My name is Jordan Thornquest, and I freakin' love Jesus.</small></h1>
+<header class="page-header">
+  <img class="img-responsive one-edge-shadow center-img" src="http://farm8.staticflickr.com/7391/11146641993_aaa9934ed1_o.jpg" alt="Me on a bench.">
+  <h1 class="about-hello">Hey, there. <small>My name is Jordan Thornquest, and I freakin' love Jesus.</small></h1>
+</header>
 
 <p><span class="lead">I'm a musician, studio producer, web developer, and creative enthusiast from Idaho.</span> I love to make things, and I am passionate about doing my absolute best, and taking joy in whatever I do. It's no use doing something if you don't have a bit of fun, right?</p>
 <p>My absolute favorite hobby is playing the <strong>guitar</strong>, but I am also focused on achieving a career in <strong>audio recording</strong>. Not only is it a fantastic way to meet other talented musicians, but it allows me to hone my ear to all kinds of new sounds, ideas, and studio techniques, which I can later bring around and put into some of my own recordings! (I post all of my recordings on <a href="https://soundcloud.com/jordanthornquest">SoundCloud!</a>)</p>
