--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,11 +3,11 @@ layout: default
 title: Portfolio
 ---
 
-<img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3736/11217713923_9a471ef123_o.jpg" alt="Whatchya McColumns">
-<div class="page-header">
+<header class="page-header">
+  <img class="img-responsive one-edge-shadow" src="http://farm4.staticflickr.com/3736/11217713923_9a471ef123_o.jpg" alt="Whatchya McColumns">
   <h1>Portfolio <small>I'm pretty proud of these.</small></h1>
   <small class="text-muted">See anything that needs work? <a href="/contact.html">Give me some feedback.</a></small>
-</div>
+</header>
 
 <h2 class="portfolio-item-title">Miss Canyon Rim's Outstanding Teen</h2>
 <div class="row">
