add consistency with markup on all pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,8 +3,11 @@ layout: default
 title: Contact Me
 ---
 
-<img class="img-responsive one-edge-shadow" src="http://farm8.staticflickr.com/7425/11217655354_153c90505b_o.jpg" alt="SmileFox">
-<h1>Contact Me <small>let's work together.</small></h1>
+<header class="page-header">
+  <img class="img-responsive one-edge-shadow" src="http://farm8.staticflickr.com/7425/11217655354_153c90505b_o.jpg" alt="SmileFox">
+  <h1>Contact Me <small>let's work together.</small></h1>
+</header>
+
 <p class="lead">Interested in working with me on your next website, track, or studio demo? Hit me up, let's make something amazing.</p>
 
 <dl>
