--- a/creative/art.html
+++ b/creative/art.html
@@ -2,6 +2,9 @@
 layout: default
 title: Art
 ---
-<img class="img-responsive one-edge-shadow" src="http://farm6.staticflickr.com/5479/11218784354_cc012246fe_o.jpg" alt="FieldFox">
-<h1>Art <small>pencil and paper, tablet and pen.</small></h1>
-<p>I love to draw, and actually dream of doing comic art one day. Graphic design is pretty awesome, too. I'll get some up here as soon as I have some.</p>
+
+<header class="page-header">
+  <img class="img-responsive one-edge-shadow" src="http://farm6.staticflickr.com/5479/11218784354_cc012246fe_o.jpg" alt="FieldFox">
+  <h1>Art <small>pencil and paper, tablet and pen.</small></h1>
+  <p>I love to draw, and actually dream of doing comic art one day. Graphic design is pretty awesome, too. I'll get some up here as soon as I have some.</p>
+</header>
