--- a/creative/music.html
+++ b/creative/music.html
@@ -2,12 +2,13 @@
 layout: default
 title: Music
 ---
-<img class="img-responsive one-edge-shadow" src="http://farm8.staticflickr.com/7455/11218658363_f13fc3330b_o.jpg" alt="LEAP!">
-<div class="page-header">
+
+<header class="page-header">
+  <img class="img-responsive one-edge-shadow" src="http://farm8.staticflickr.com/7455/11218658363_f13fc3330b_o.jpg" alt="LEAP!">
   <h1>Music <small>come hear some of my sounds.</small></h1>
   <p>This is just a taste: all of my sounds are available for free download and streaming on <a href="https://soundcloud.com/jordanthornquest">SoundCloud.</a></p>
   <p>Of course, you can download and hear my favorites right here.</p>
-</div>
+</header>
 
 <h3>Jentry Hagan <small>2013</small></h3>
 <p>This set was done with Miss Jentry Hagan, a local Idahoan vocalist with a beautiful voice. I played guitar, and she did the hard stuff. I expect to record more of her soon.</p>
