--- a/creative/index.html
+++ b/creative/index.html
@@ -3,12 +3,8 @@ layout: default
 title: Creative
 ---
 
-<div id="home">
-
+<header class="page-header">
   <img src="http://farm4.staticflickr.com/3831/11217263025_ae1596d70d_o.jpg" class="img-responsive one-edge-shadow" alt="Amp &amp; Feet">
-
   <h1>Creative <small>stuff that I've made.</small></h1>
-
   <p>More stuff on the way. Check the "Creative" dropdown for what's available, for now :)</p>
-
-</div>
+</header>
